# blog-app

./: Cargo.toml  README.md  docker-compose.yml  sample.env
docs/: migrations.md
migrations/: 20240429184530_addBlogTable.down.sql  20240429184530_addBlogTable.up.sql
src/: db.rs  errors.rs  health.rs  main.rs  operations.rs  post.rs
src/post/: dto.rs  entity.rs  handler.rs
